<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_600"
    tools:context=".admin.AdminLab">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_lab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentStart="true"
                android:foreground="?attr/selectableItemBackground"
                android:onClick="Back"
                android:src="@drawable/ic_arrow_back"
                app:tint="@color/white_smoke" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/lab"
                android:textColor="@color/white_smoke"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_lab"
        android:background="@drawable/bg_round_top_history" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_lab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_lab"
        android:layout_marginTop="16dp">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lab_mesin" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lab_instalasi" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lab_instrumentasi" />
    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/content_lab"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tab_lab" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_tools"
        android:layout_width="210dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="+ Tambah Alat"
        android:textAllCaps="false"
        app:cornerRadius="20dp" />

</RelativeLayout>