<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_Bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                app:endIconDrawable="@drawable/ic_clear"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_user_fill"
                app:startIconTint="@color/blue_600">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFullnameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textColorHint="@color/semi_black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                app:endIconDrawable="@drawable/ic_clear"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_nim_card_fill"
                app:startIconTint="@color/blue_600">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNimRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nim"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/semi_black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                app:endIconDrawable="@drawable/ic_clear"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_class_fill"
                app:startIconTint="@color/blue_600">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/etClassRegister"
                    style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Ex: PTE 01 2017"
                    android:inputType="textAutoComplete"
                    android:textColor="@color/black"
                    android:textColorHint="@color/semi_black"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                app:endIconDrawable="@drawable/ic_clear"
                app:endIconMode="clear_text"
                app:prefixText="@string/kelompok"
                app:prefixTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_team_fill"
                app:startIconTint="@color/blue_600">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etKelompokRegister"
                    style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/kelompok"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/semi_black"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                app:endIconDrawable="@drawable/ic_clear"
                app:endIconMode="clear_text"
                app:prefixText="+62"
                app:prefixTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_phone"
                app:startIconTint="@color/blue_600">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhoneRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/semi_black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                app:endIconDrawable="@drawable/ic_clear"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_mail_fill"
                app:startIconTint="@color/blue_600">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsernameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/semi_black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_lock_fill"
                app:startIconTint="@color/blue_600">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPasswordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/semi_black" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/btn_Bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_round_top"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="4dp"
        android:paddingBottom="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:minHeight="56dp"
            android:text="@string/register"
            android:textAllCaps="false"
            app:cornerRadius="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/have_account"
                android:textColor="@color/semi_black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingHorizontal="8dp"
                android:text="@string/login"
                android:textColor="@color/blue_600"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>